; ModuleID = '/home/carl/AnghaBench/freebsd/stand/common/extr_console.c_cons_set.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/common/extr_console.c_cons_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.env_var = type { i32 }

@CMD_OK = common dso_local global i32 0, align 4
@EV_NOHOOK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.env_var*, i32, i8*)* @cons_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cons_set(%struct.env_var* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.env_var*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.env_var* %0, %struct.env_var** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %15, label %11

11:                                               ; preds = %3
  %12 = load i8*, i8** %7, align 8
  %13 = call i64 @cons_check(i8* %12)
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %11, %3
  %16 = load i32, i32* @CMD_OK, align 4
  store i32 %16, i32* %4, align 4
  br label %35

17:                                               ; preds = %11
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @cons_change(i8* %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* @CMD_OK, align 4
  %22 = icmp ne i32 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %17
  %24 = load i32, i32* %8, align 4
  store i32 %24, i32* %4, align 4
  br label %35

25:                                               ; preds = %17
  %26 = load %struct.env_var*, %struct.env_var** %5, align 8
  %27 = getelementptr inbounds %struct.env_var, %struct.env_var* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* %6, align 4
  %30 = load i32, i32* @EV_NOHOOK, align 4
  %31 = or i32 %29, %30
  %32 = load i8*, i8** %7, align 8
  %33 = call i32 @env_setenv(i32 %28, i32 %31, i8* %32, i32* null, i32* null)
  %34 = load i32, i32* @CMD_OK, align 4
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %25, %23, %15
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i64 @cons_check(i8*) #1

declare dso_local i32 @cons_change(i8*) #1

declare dso_local i32 @env_setenv(i32, i32, i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
